Add stage to upload JAR

--- a/codefresh.yml
+++ b/codefresh.yml
@@ -3,8 +3,16 @@ stages:
 - clone
 - test
 - build
+- release
 
 steps:
+  get_github_token:
+    title: Get default GitHub token
+    stage: clone
+    image: codefresh/cli
+    commands:
+    - cf_export GITHUB_TOKEN=$(codefresh get context github --decrypt -o yaml | yq -r .spec.data.auth.password)
+
   main_clone:
     title: Clone main repository
     type: git-clone
@@ -28,3 +36,19 @@ steps:
     working_directory: ${{main_clone}}
     commands:
     - sbt -ivy /codefresh/volume/.ivy2 assembly
+
+  upload_jar:
+    title: Upload release JAR
+    stage: release
+    image: guangie88/releaser:alpine_upx-3_ghr-0.12
+    working_directory: ${{main_clone}}
+    commands:
+    - |-
+      if [ -z "${CF_RELEASE_TAG}" ]; then
+        TAG_NAME=experimental
+      else
+        TAG_NAME=${CF_RELEASE_TAG}
+      fi
+    - |-
+      ghr -t ${{GITHUB_TOKEN}} -u ${{CF_REPO_OWNER}} -r ${{CF_REPO_NAME}} \
+          -c ${{CF_REVISION}} -replace ${TAG_NAME} target/scala-2.11/zeppelin-jar-loader-v0.1.0.jar
